# kizuna

./: Cargo.toml  README.md
misc/: image.txt
src/: cli.rs  common.rs  logger.rs  main.rs
src/agent/: mod.rs
src/agent/routes/: mod.rs  root.rs  self_updater.rs  status.rs  uptime.rs
src/cli/: agent.rs  mod.rs  service.rs  types.rs
src/service/: linux.rs  mod.rs
